Uploaded image for project: 'Core Server'
  1. Core Server
  2. SERVER-73007

CURL_OPT_SEEKFUNCTION not set for multi-pass authentication

    • Fully Compatible
    • ALL
    • v7.0, v6.3, v6.0, v5.0, v4.4
    • Security 2023-01-23, Security 2023-05-01
    • 161

      We have observed the error CURLE_SEND_FAIL_REWIND occurring during authentication. This error occurs when data that has already been sent to the authentication server needs to be resent, which can happen as part of some multi-pass authentication methods (source: https://curl.se/libcurl/c/CURLOPT_SEEKFUNCTION.html), but there is no seek/ioctl function set to allow rewinding to the data that needs to be sent. To fix this, we need to define a CURL_OPT_SEEKFUNCTION so that we can correctly rewind.

            Assignee:
            mark.benvenuto@mongodb.com Mark Benvenuto
            Reporter:
            gabriel.marks@mongodb.com Gabriel Marks
            Votes:
            1 Vote for this issue
            Watchers:
            19 Start watching this issue

              Created:
              Updated:
              Resolved: