SERVER-73007 CURL_OPT_SEEKFUNCTION for HTTP retry

(cherry picked from commit f872d0b4efeba4f45961fca175e9bb3c65675d5f)